--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -9,3 +9,16 @@ body{
     float: right;
     margin-bottom: 15px;
 }
+.media-object{
+    width: 38px;
+    height: 38px;
+}
+.text-desc{
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
+}
+.community-menu{
+    font-size: 13px;
+    color: #999;
+}
