--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>问答社区</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/community.css"/>
-    <link rel="stylesheet" href="css/bootstrap-theme.css.map"/>
+    <title th:text="${sectionName}"></title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/community.css"/>
+    <link rel="stylesheet" href="/css/bootstrap-theme.css.map"/>
     <script src="/js/jquery-3.6.0.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 
 </head>
 <body>
@@ -15,7 +15,7 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
+            <h2 th:text="${sectionName}"></h2>
             <hr>
             <div class="media" th:each="question : ${pageination.questions}">
                 <div class="media-left">
@@ -24,10 +24,7 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading">
-                        <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
-                    </h4>
-                    <span th:text="${question.description}"></span><br>
+                    <h4 class="media-heading" th:text="${question.title}"></h4>
                     <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复
                         • <span th:text="${question.viewCount}"></span> 次浏览
                         • <span th:text="${#dates.format(question.gmtCreate,'yyyy-mm-dd')}"> 小时前</span>
@@ -37,25 +34,26 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pageination.showFirst}">
-                        <a href="/?page=1" aria-label="First">
+                        <a th:href="@{'/profile/'+${section}(page=${1})}"
+                           aria-label="First">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${pageination.showPrevious}">
-                        <a th:href="@{/(page=${pageination.page}-1)}" aria-label="Previous">
+                        <a th:href="@{'/profile/'+${section}(page=${pageination.page}-1)}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li th:each="page:${pageination.pages}" th:class="${pageination.page==page} ? 'active' : ''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                        <a th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pageination.showNext}">
-                        <a th:href="@{/(page=${pageination.page}+1)}" aria-label="ShowNext">
+                        <a th:href="@{'/profile/'+${section}(page=${pageination.page}+1)}" aria-label="ShowNext">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${pageination.showEndPage}">
-                        <a th:href="@{/(page=${pageination.totalPage})}" aria-label="ShowEndPage">
+                        <a th:href="@{'/profile/'+${section}(page=${pageination.totalPage})}" aria-label="ShowEndPage">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
                     </li>
@@ -63,7 +61,13 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热点话题</h3>
+            <div class="list-group">
+                <a href="/profile/questions" th:class="${section == 'questions'} ? 'active list-group-item' : 'list-group-item'">我的问题</a>
+                <a href="/profile/replies" th:class="${section == 'replies'} ? 'active list-group-item' : 'list-group-item'">
+                    最新回复
+                    <span class="badge">14</span>
+                </a>
+            </div>
         </div>
     </div>
 </div>
