--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -28,6 +28,9 @@
                     <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复
                         • <span th:text="${question.viewCount}"></span> 次浏览
                         • <span th:text="${#dates.format(question.gmtCreate,'yyyy-mm-dd')}"> 小时前</span>
+                        •<a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user!=null && session.user.id==question.creator}">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                         </a>
                     </span>
                 </div>
             </div>
