--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/bootstrap-theme.css.map"/>
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="navigation :: nav"></div>
@@ -21,20 +22,49 @@
                 <input class="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题 (简单扼要) :</label>
-                    <input type="text" class="form-control" name="title" id="title" placeholder="问题标题..." th:value="${title}">
+                    <input type="text" class="form-control" name="title"
+                           id="title" placeholder="问题标题..."
+                           th:value="${title}" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充 (必填, 请参考右侧提示) :</label>
-                    <textarea class="form-control" name="description" id="description" rows="10" cols="30" th:text="${description}"></textarea>
+                    <textarea class="form-control" name="description" id="description" rows="10" cols="30"
+                              th:text="${description}"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签: </label>
-                    <input type="text" class="form-control" name="tag" id="tag" placeholder="输入标签,以, 号隔开" th:value="${tag}">
+                    <input type="text" class="form-control" name="tag"
+                           id="tag"
+                           placeholder="输入标签,以, 号隔开"
+                           autocomplete="off"
+                           th:value="${tag}"
+                           onclick="showSelectTag()">
+                    <div id="select-tag" class="publish-tag-tab">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" th:each="selectCategory,selectCategoryStat : ${tags}"
+                                th:class="${selectCategoryStat.first ? 'active':''}">
+                                <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
+                                   data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
+                            </li>
+                        </ul>
+
+                        <div class="tab-content">
+                            <div role="tabpanel" th:each="selectCategory : ${tags}"
+                                 th:id="${selectCategory.categoryName}"
+                                 th:class="${selectCategoryStat.first ? 'active tab-pane':'tab-pane'}">
+                                <span class="label label-info question-tag" th:each="selectTag : ${selectCategory.tags}">
+                                    <span class="glyphicon glyphicon-tag" th:data-tag="${selectTag}"
+                                          onclick="selectTag(this)" th:text="${' '+selectTag}"></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
                         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                            <div class="alert alert-danger col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${error!=null}" th:text="${error}"></div>
+                            <div class="alert alert-danger col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                                 th:if="${error!=null}" th:text="${error}"></div>
                         </div>
 
                         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
