--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,27 +8,115 @@
     <link rel="stylesheet" href="/css/bootstrap-theme.css.map"/>
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/moment.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 
 </head>
 <body>
 <div th:insert="navigation :: nav"></div>
 <div class="container-fluid main">
     <div class="row">
+        <!-- 左边主要内容 -->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h4 th:text="${question.title}"></h4>
-            <span class="text-desc">
+            <!-- 正文 -->
+           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+               <h4 class="question-title" th:text="${question.title}"></h4>
+               <span class="text-desc">
                         作者: <span th:text="${question.user.name}"></span> |
                         阅读数: <span th:text="${question.viewCount}"></span> |
-                        发布时间: <span th:text="${#dates.format(question.gmtCreate,'yyyy-mm-dd')}"></span>
+                        发布时间: <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd')}"></span>
                     </span>
-            <hr>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user!=null && session.user.id==question.creator}">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                编辑
-            </a>
+               <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+               <!--内容-->
+               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+
+               <!--标签-->
+               <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                   <span class="label label-info question-tag" th:each="tag : ${question.tag.split(',')}">
+                       <span class="glyphicon glyphicon-tag"></span>
+                       <span class="label label-info" th:text="${tag}"></span>
+                   </span>
+               </div>
+               <!--编辑-->
+               <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                   <a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user!=null && session.user.id==question.creator}">
+                       <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                   </a>
+               </div>
+               <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+           </div>
+
+            <!-- 回复-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>
+                    <span th:text="${question.commentCount}"></span> 个回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments" th:each="community : ${comments}">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded" th:src="${community.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body" th:id="${'community-body-'+community.id}">
+                            <h5 class="media-heading">
+                                <span th:text="${community.user.name}"></span>
+                            </h5>
+                            <div th:text="${community.context}"></div>
+                            <div class="menu">
+                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                                <span th:data-id="${community.id}" onclick="collapseComments(this)" class="comment-icon">
+                                    <span class="glyphicon glyphicon-comment"></span>
+                                    <span th:text="${community.commentCount}"></span>
+                                </span>
+                                <span class="pull-right"
+                                      th:text="${#dates.format(community.gmtCreate,'yyyy-MM-dd')}"></span>
+                            </div>
+                            <!-- 二级评论 -->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
+                                        th:id="${'community-'+community.id}">
+                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                        <input type="text" class="form-control" placeholder="评论一下..." th:id="${'input-'+community.id}">
+                                        <button type="button" class="btn btn-success pull-right" th:data-id="${community.id}" onclick="community(this)">提交</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            <!--回复输入框-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>
+                    提交回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp"/>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h5 class="media-heading">
+                                <span th:text="${question.user.name}"></span>
+                            </h5>
+                        </div>
+                    </div>
+                    <input type="hidden" id="question_id" th:value="${question.id}">
+                    <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                    <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
+                </div>
+            </div>
+
         </div>
+
+        <!-- 右边信息模块 -->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>发起人</h4>
@@ -45,9 +133,20 @@
                     </div>
                 </div>
             </div>
+            <!-- 微信号 -->
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>站长微信</h4>
+                <img class="img-thumbnail question-wechat" src="/img/wechat.png">
+            </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
+                <ul class="question-related">
+                    <li th:each="related : ${relatedQuestions}">
+                        <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
