--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
-            <div class="media" th:each="question : ${pageination.questions}">
+            <div class="media" th:each="question : ${pageination.data}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
@@ -37,7 +37,7 @@
                     <span th:text="${question.description}"></span><br>
                     <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复
                         • <span th:text="${question.viewCount}"></span> 次浏览
-                        • <span th:text="${#dates.format(question.gmtCreate,'yyyy-mm-dd')}"> 小时前</span>
+                        • <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"> 小时前</span>
                     </span>
                 </div>
             </div>
