--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -25,6 +25,7 @@
                     <li th:if="${session.user!=null}">
                         <a href="/publish">提问</a>
                     </li>
+                    <li><a href="/profile/replies">通知 <span class="badge" th:text="${session.unreadCount}"></span></a></li>
                     <li th:if="${session.user==null}"><a
                             href="https://github.com/login/oauth/authorize?client_id=f88ba218935aa8831b3f&redirect_uri=http://localhost:8080/callback&scope=user&state=1">
                         登录</a></li>
