--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="/css/community.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.css.map"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.css.map"/>
+    <link rel="stylesheet" href="/css/editormd.min.css"/>
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="/js/community.js" type="application/javascript"></script>
+    <script src="/js/editormd.min.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="navigation :: nav"></div>
@@ -26,11 +28,31 @@
                            id="title" placeholder="问题标题..."
                            th:value="${title}" autocomplete="off">
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="question-editor">
                     <label for="description">问题补充 (必填, 请参考右侧提示) :</label>
-                    <textarea class="form-control" name="description" id="description" rows="10" cols="30"
+                    <textarea class="form-control" name="description"
+                              style="display:none;"
+                              id="description"
+                              rows="10"
+                              cols="30"
                               th:text="${description}"></textarea>
                 </div>
+                <script type="text/javascript">
+                    $(function() {
+                        var editor = editormd("question-editor", {
+                            width  : "100%",
+                            height : 350,
+                            path   : "/js/lib/",
+                            delay  : 0,
+                            watch  : false,
+                            placeholder: "请输入问题描述",
+                            imageUpload    : true,
+                            imageFormats   : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+                            imageUploadURL : "/file/upload",
+
+                        });
+                    });
+                </script>
                 <div class="form-group">
                     <label for="tag">添加标签: </label>
                     <input type="text" class="form-control" name="tag"
