--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/community.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.css.map"/>
-    <script src="/js/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="/css/editormd.preview.min.css"/>
+    <script src="/js/jquery-3.6.0.min.js" type="application/javascript"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
-    <script src="/js/moment.js" type="application/javascript"></script>
     <script src="/js/community.js" type="application/javascript"></script>
-
+    <script src="/js/moment.js" type="application/javascript"></script>
+    <script src="/js/editormd.min.js" type="application/javascript"></script>
+    <script src="/js/lib/marked.min.js"></script>
+    <script src="/js/lib/prettify.min.js"></script>
 </head>
 <body>
 <div th:insert="navigation :: nav"></div>
@@ -24,12 +27,19 @@
                <span class="text-desc">
                         作者: <span th:text="${question.user.name}"></span> |
                         阅读数: <span th:text="${question.viewCount}"></span> |
-                        发布时间: <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd')}"></span>
+                        发布时间: <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>
                     </span>
                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
                <!--内容-->
-               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">
+                   <textarea style="display:none;" th:text="${question.description}"></textarea>
+               </div>
+               <script type="text/javascript">
+                   $(function() {
+                       editormd.markdownToHTML("question-view", {});
+                   });
+               </script>
 
                <!--标签-->
                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -99,12 +109,12 @@
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                                <img class="media-object img-rounded" th:src="${session.user != null ? session.user.avatarUrl : '/images/default-avatar.png'}">
                             </a>
                         </div>
                         <div class="media-body">
                             <h5 class="media-heading">
-                                <span th:text="${question.user.name}"></span>
+                                <span th:text="${session.user != null ? session.user.name : '默认用户'}"></span>
                             </h5>
                         </div>
                     </div>
@@ -137,7 +147,7 @@
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>站长微信</h4>
-                <img class="img-thumbnail question-wechat" src="/img/wechat.png">
+                <img class="img-thumbnail question-wechat" src="/images/wechat.png">
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
