--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,6 +17,7 @@
     <p th:text="${message}"></p>
     <p><a class="btn btn-primary btn-lg" href="/" role="button">回到首页</a></p>
 </div>
+<div th:insert="footer :: foot"></div>
 </body>
 
 </html>
