--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,25 +44,27 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pageination.showFirst}">
-                        <a href="/?page=1" aria-label="First">
+                        <a href="/?page=1"
+                           th:href="@{/(page=1,search=${search})}"
+                           aria-label="First">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${pageination.showPrevious}">
-                        <a th:href="@{/(page=${pageination.page}-1)}" aria-label="Previous">
+                        <a th:href="@{/(page=${pageination.page}-1,search=${search})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li th:each="page:${pageination.pages}" th:class="${pageination.page==page} ? 'active' : ''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                        <a th:href="@{/(page=${page},search=${search})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pageination.showNext}">
-                        <a th:href="@{/(page=${pageination.page}+1)}" aria-label="ShowNext">
+                        <a th:href="@{/(page=${pageination.page}+1,search=${search})}" aria-label="ShowNext">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${pageination.showEndPage}">
-                        <a th:href="@{/(page=${pageination.totalPage})}" aria-label="ShowEndPage">
+                        <a th:href="@{/(page=${pageination.totalPage},search=${search})}" aria-label="ShowEndPage">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
                     </li>
@@ -70,9 +72,13 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热点话题</h3>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>站长微信</h4>
+                <img class="img-thumbnail question-wechat" src="/images/wechat.png">
+            </div>
         </div>
     </div>
 </div>
+<div th:insert="footer :: foot"></div>
 </body>
 </html>
