--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -15,9 +15,9 @@
 
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-left" action="/" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="搜索问题">
+                        <input type="text" class="form-control" name="search" placeholder="搜索问题">
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
@@ -26,9 +26,8 @@
                         <a href="/publish">提问</a>
                     </li>
                     <li><a href="/profile/replies">通知 <span class="badge" th:text="${session.unreadCount}"></span></a></li>
-                    <li th:if="${session.user==null}"><a
-                            href="https://github.com/login/oauth/authorize?client_id=f88ba218935aa8831b3f&redirect_uri=http://localhost:8080/callback&scope=user&state=1">
-                        登录</a></li>
+                    <li th:if="${session.user==null}">
+                        <a th:href="@{https://github.com/login/oauth/authorize(client_id='f88ba218935aa8831b3f',redirect_uri=${#httpServletRequest.getRequestURL()+'callback'},scope='user',state=1)}">登录</a></li>
                     <li class="dropdown" th:if="${session.user!=null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
