--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -27,7 +27,8 @@
                     </li>
                     <li><a href="/profile/replies">通知 <span class="badge" th:text="${session.unreadCount}"></span></a></li>
                     <li th:if="${session.user==null}">
-                        <a th:href="@{https://github.com/login/oauth/authorize(client_id='f88ba218935aa8831b3f',redirect_uri=${#httpServletRequest.getRequestURL()+'callback'},scope='user',state=1)}">登录</a></li>
+                        <a th:href="@{https://gitee.com/oauth/authorize(client_id='65e979205e7e076bdf8ef26f6b1ac2215329e7fdf3052c69a6107a2440642241',
+                        redirect_uri=${#httpServletRequest.getRequestURL()+'callback'},state=1,response_type=code)}">登录</a></li>
                     <li class="dropdown" th:if="${session.user!=null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
